--- a/.github/workflows/x-workflow.yml
+++ b/.github/workflows/x-workflow.yml
@@ -1,18 +1,22 @@
 name: Latest X Post
+
 on:
-  schedule: # Run workflow automatically
-    - cron: '0 * * * *' # Runs every day
-  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
+  schedule:
+    - cron: '0 0 * * *' # Запуск каждый день в полночь UTC
+  workflow_dispatch: # Ручной запуск по кнопке
+
 permissions:
-  contents: write # To write the generated contents to the readme
+  contents: write # Разрешение на запись в репозиторий (чтобы обновить README)
 
 jobs:
   update-readme-with-blog:
     name: Update this repo's README with latest x post
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Pull in X posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
